# nsis-semvercompare

./: Cargo.toml  README.md  demo.nsi
.changes/: config.json  fix-run-as-user-admin.md  fix-space-in-path.md  kill-already-terminated.md  no_std.md  run-as-user.md
.github/workflows/: audit.yml  change-status-on-pr.yml  clippy-fmt.yml  covector-version-or-publish.yml  test.yml
crates/nsis-download/: Cargo.toml
crates/nsis-download/src/: lib.rs
crates/nsis-fn/: Cargo.toml
crates/nsis-fn/src/: lib.rs
crates/nsis-plugin-api/: Cargo.toml
crates/nsis-plugin-api/src/: lib.rs
crates/nsis-process/: CHANGELOG.md  Cargo.toml  build.rs
crates/nsis-process/src/: lib.rs  run_as_user.rs
crates/nsis-semvercompare/: CHANGELOG.md  Cargo.toml  build.rs
crates/nsis-semvercompare/src/: lib.rs
crates/nsis-tauri-utils/: CHANGELOG.md  Cargo.toml  build.rs
crates/nsis-tauri-utils/src/: lib.rs
