[package]
name = "nsis-semvercompare"
version = "0.3.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
crate-type = [ "cdylib" ]

[features]
test = [ ]

[dependencies]
semver = { version = "1.0", default-features = false }
nsis-plugin-api = { workspace = true }
windows-sys = { workspace = true }
